external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_unpack_of_non_positional_struct.exp
error[E03013]: positional call mismatch
  ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:7:13
  │
7 │         let Foo(_) = x;
  │             ^^^^^^ Invalid deconstruction. Named struct field declarations require named deconstruction

error[E04016]: too few arguments
  ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:7:13
  │
7 │         let Foo(_) = x;
  │             ^^^^^^ Missing binding for field 'field' in '0x42::M::Foo'

error[E03010]: unbound field
  ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:7:13
  │
7 │         let Foo(_) = x;
  │             ^^^^^^ Unbound field '0' in '0x42::M::Foo'

error[E03013]: positional call mismatch
   ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:14:9
   │
14 │         Foo(_) = x;
   │         ^^^^^^ Invalid deconstruction. Named struct field declarations require named deconstruction

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:14:9
   │
14 │         Foo(_) = x;
   │         ^^^^^^ Missing assignment for field 'field' in '0x42::M::Foo'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_unpack_of_non_positional_struct.move:14:9
   │
14 │         Foo(_) = x;
   │         ^^^^^^ Unbound field '0' in '0x42::M::Foo'

